fixed bug: launching an update now works fine in folders with spaces too. (Apperently .exec(String) is bad while .exec(new String[]{}) is good and works fine even in folders with spaces.)